# convopus

./: LICENSE  README.md  config.json  requirements.txt  setup.cfg
.github/workflows/: codeql.yml  pylint.yml
convert-to-opus-cli/: __main__.py  app.py  genconf.py
convert-to-opus-cli/ffpb/: ffpb.py
src/convopus/: app.py  app_mt.py  genconf.py  main.py
src/ffpb/: COPYING  ffpb.py
src/ffpb_convopus/: ffpb.py
