[metadata]
name = convert-to-opus-cli
version = 0.0.1
author=D221
author_email=D221@airmail.cc
description=Python CLI program that converts directories of audio files to opus using ffmpeg
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/D221/convert-to-opus-cli
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = convert-to-opus-cli
install_requires =
    ffpb
[options.entry_points]  
console_scripts =
    convert-to-opus-cli=convert-to-opus-cli:main