[metadata]
name = convopus
version = 1.2
author = D221
author_email = D221@airmail.cc
url = https://github.com/D221/convopus
description = Python CLI program that converts directories of audio files to opus using ffmpeg
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX :: Linux
  Operating System :: MacOS
  Environment :: Console
  Topic :: Multimedia
  Topic :: Multimedia :: Sound/Audio
  Topic :: Multimedia :: Sound/Audio :: Conversion
  Topic :: Utilities
project_urls =
  Bug Tracker = https://github.com/D221/convopus/issues

[options]
setup_require =
  setuptools >=39.2
install_requires =
  tqdm
  appdirs
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
  convopus = convopus:main